--- a/jobs/kafka/templates/config/server.properties.erb
+++ b/jobs/kafka/templates/config/server.properties.erb
@@ -111,7 +111,7 @@ log.cleaner.enable=false
 # server. e.g. "127.0.0.1:3000,127.0.0.1:3001,127.0.0.1:3002".
 # You can also append an optional chroot string to the urls to specify the
 # root directory for all kafka znodes.
-zookeeper.connect=<%= p("kafka.zookeeper.connect") %>
+zookeeper.connect=<%= p("kafka.zookeeper.connect").flatten.map { |host| (host =~ /\:[0-9]+/ ? "#{host}":"#{host}:2181") }.join(",") %>
 
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=1000000
