--- a/jobs/kafka/templates/config/server.properties.erb
+++ b/jobs/kafka/templates/config/server.properties.erb
@@ -17,7 +17,7 @@
 ############################# Server Basics #############################
 
 # The id of the broker. This must be set to a unique integer for each broker.
-broker.id=<%= index %>
+broker.id=<%= index + p("kafka.index_offset") %>
 
 ############################# Socket Server Settings #############################
 
