--- a/jobs/kafka/templates/config/server.properties.erb
+++ b/jobs/kafka/templates/config/server.properties.erb
@@ -24,17 +24,10 @@ broker.id=<%= index + p("kafka.index_offset") %>
 # The port the socket server listens on
 port=<%= p("kafka.port") %>
 
-# Hostname the broker will bind to. If not set, the server will bind to all interfaces
-#host.name=localhost
-
 # Hostname the broker will advertise to producers and consumers. If not set, it uses the
 # value for "host.name" if configured.  Otherwise, it will use the value returned from
 # java.net.InetAddress.getCanonicalHostName().
-#advertised.host.name=<hostname routable by clients>
-
-# The port to publish to ZooKeeper for clients to use. If this is not set,
-# it will publish the same port that the broker binds to.
-#advertised.port=<port accessible by clients>
+advertised.host.name=<%= spec.networks.marshal_dump.first[1].ip %> 
 
 # The number of threads handling network requests
 num.network.threads=2
