--- a/jobs/kafka/templates/config/server.properties.erb
+++ b/jobs/kafka/templates/config/server.properties.erb
@@ -70,7 +70,7 @@ num.partitions=2
 #log.flush.interval.messages=10000
 
 # The maximum amount of time a message can sit in a log before we force a flush
-#log.flush.interval.ms=1000
+log.flush.interval.ms=<%= p 'kafka.log_flush'%>
 
 ############################# Log Retention Policy #############################
 
