--- a/jobs/kafka/templates/config/server.properties.erb
+++ b/jobs/kafka/templates/config/server.properties.erb
@@ -115,6 +115,6 @@ kafka.metrics.polling.interval.secs=<%= p 'kafka.riemann.polling_interval'%>
 kafka.metrics.reporters=org.pingles.kafka.KafkaRiemannReporter
 kafka.riemann.metrics.reporter.enabled=true
 kafka.riemann.metrics.reporter.publisher=riemann
-kafka.riemann.metrics.reporter.publisher.host=<%= p 'kafka.riemann.host'%>
-kafka.riemann.metrics.reporter.publisher.port=<%= p 'kafka.riemann.port'%>
+kafka.riemann.metrics.reporter.publisher.host=<%= p 'riemann.server'%>
+kafka.riemann.metrics.reporter.publisher.port=5555
 kafka.riemann.metrics.reporter.hostname=<%= p 'kafka.riemann.prefix' %>.<%= spec.index %>.<%= spec.job.name %>.<%= p 'riemann.suffix' %>
