--- a/jobs/kafka/templates/config/log4j.properties.erb
+++ b/jobs/kafka/templates/config/log4j.properties.erb
@@ -21,44 +21,32 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d] %p %m (%c)%n
 
-log4j.appender.metricsAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.metricsAppender.DatePattern='.'yyyy-MM-dd-HH
-log4j.appender.metricsAppender.MaxBackupIndex=6
+log4j.appender.metricsAppender=org.apache.log4j.FileAppender
 log4j.appender.metricsAppender.File=${kafka.logs.dir}/metrics.log
 log4j.appender.metricsAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.metricsAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
 
-log4j.appender.kafkaAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.kafkaAppender.DatePattern='.'yyyy-MM-dd
-log4j.appender.kafkaAppender.MaxBackupIndex=7
+log4j.appender.kafkaAppender=org.apache.log4j.FileAppender
 log4j.appender.kafkaAppender.File=${kafka.logs.dir}/server.log
 log4j.appender.kafkaAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.kafkaAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
 
-log4j.appender.stateChangeAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.stateChangeAppender.DatePattern='.'yyyy-MM-dd
-log4j.appender.stateChangeAppender.MaxBackupIndex=7
+log4j.appender.stateChangeAppender=org.apache.log4j.FileAppender
 log4j.appender.stateChangeAppender.File=${kafka.logs.dir}/state-change.log
 log4j.appender.stateChangeAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.stateChangeAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
 
-log4j.appender.requestAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.requestAppender.DatePattern='.'yyyy-MM-dd
-log4j.appender.requestAppender.MaxBackupIndex=7
+log4j.appender.requestAppender=org.apache.log4j.FileAppender
 log4j.appender.requestAppender.File=${kafka.logs.dir}/kafka-request.log
 log4j.appender.requestAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.requestAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
 
-log4j.appender.cleanerAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.cleanerAppender.DatePattern='.'yyyy-MM-dd-HH
-log4j.appender.cleanerAppender.MaxBackupIndex=7
+log4j.appender.cleanerAppender=org.apache.log4j.FileAppender
 log4j.appender.cleanerAppender.File=${kafka.logs.dir}/log-cleaner.log
 log4j.appender.cleanerAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.cleanerAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
 
-log4j.appender.controllerAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.controllerAppender.DatePattern='.'yyyy-MM-dd-HH
-log4j.appender.controllerAppender.MaxBackupIndex=7
+log4j.appender.controllerAppender=org.apache.log4j.FileAppender
 log4j.appender.controllerAppender.File=${kafka.logs.dir}/controller.log
 log4j.appender.controllerAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.controllerAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
