--- a/jobs/kafka/templates/config/server.properties.erb
+++ b/jobs/kafka/templates/config/server.properties.erb
@@ -24,10 +24,18 @@ broker.id=<%= index + p("kafka.index_offset") %>
 # The port the socket server listens on
 port=<%= p("kafka.port") %>
 
+
+# Hostname the broker will bind to. If not set, the server will bind to all interfaces
+#host.name=localhost
+
 # Hostname the broker will advertise to producers and consumers. If not set, it uses the
 # value for "host.name" if configured.  Otherwise, it will use the value returned from
 # java.net.InetAddress.getCanonicalHostName().
 advertised.host.name=<%= spec.networks.marshal_dump.first[1].ip %>
+
+# The port to publish to ZooKeeper for clients to use. If this is not set,
+# it will publish the same port that the broker binds to
+#advertised.port=<port accessible by clients>
 
 # The number of threads handling network requests
 num.network.threads=<%= p("kafka.num_network_threads") %>
@@ -36,10 +44,10 @@ num.network.threads=<%= p("kafka.num_network_threads") %>
 num.io.threads=8
 
 # The send buffer (SO_SNDBUF) used by the socket server
-socket.send.buffer.bytes=1048576
+socket.send.buffer.bytes=102400
 
 # The receive buffer (SO_RCVBUF) used by the socket server
-socket.receive.buffer.bytes=1048576
+socket.receive.buffer.bytes=102400
 
 # The maximum size of a request that the socket server will accept (protection against OOM)
 socket.request.max.bytes=104857600
@@ -48,12 +56,16 @@ socket.request.max.bytes=104857600
 ############################# Log Basics #############################
 
 # A comma seperated list of directories under which to store log files
-log.dirs=<%= p("kafka.log.dirs") %>
+log.dirs=<%= p("kafka.log_dirs") %>
 
 # The default number of log partitions per topic. More partitions allow greater
 # parallelism for consumption, but this will also result in more files across
 # the brokers.
-num.partitions=2
+num.partitions=1
+
+# The number of threads per data directory to be used for log recovery at startup and flushing at shutdown.
+# This value is recommended to be increased for installations with data dirs located in RAID array.
+num.recovery.threads.per.data.dir=1
 
 # Enable auto creation of topic on the server.
 auto.create.topics.enable=<%= p("kafka.auto_create_topics_enable") %>
@@ -73,7 +85,7 @@ auto.create.topics.enable=<%= p("kafka.auto_create_topics_enable") %>
 #log.flush.interval.messages=10000
 
 # The maximum amount of time a message can sit in a log before we force a flush
-log.flush.interval.ms=<%= p("kafka.log_flush") %>
+log.flush.interval.ms=<%= p("kafka.log_flush_interval_ms") %>
 
 ############################# Log Retention Policy #############################
 
@@ -83,22 +95,25 @@ log.flush.interval.ms=<%= p("kafka.log_flush") %>
 # from the end of the log.
 
 # The minimum age of a log file to be eligible for deletion
-log.retention.hours=<%= p("kafka.retention_hours") %>
+log.retention.hours=<%= p("kafka.log_retention_hours") %>
 
 # A size-based retention policy for logs. Segments are pruned from the log as long as the remaining
 # segments don't drop below log.retention.bytes.
 #log.retention.bytes=1073741824
 
 # The maximum size of a log segment file. When this size is reached a new log segment will be created.
-log.segment.bytes=536870912
+log.segment.bytes=1073741824
 
 # The interval at which log segments are checked to see if they can be deleted according
 # to the retention policies
-log.retention.check.interval.ms=60000
+log.retention.check.interval.ms=300000
 
 # By default the log cleaner is disabled and the log retention policy will default to just delete segments after their retention expires.
 # If log.cleaner.enable=true is set the cleaner will be enabled and individual logs can then be marked for log compaction.
 log.cleaner.enable=false
+
+# Enable delete topic.
+delete.topic.enable=<%= p("kafka.delete_topic_enable") %>
 
 ############################# Zookeeper #############################
 
@@ -107,10 +122,10 @@ log.cleaner.enable=false
 # server. e.g. "127.0.0.1:3000,127.0.0.1:3001,127.0.0.1:3002".
 # You can also append an optional chroot string to the urls to specify the
 # root directory for all kafka znodes.
-zookeeper.connect=<%= p("kafka.zookeeper.connect").flatten.map { |host| (host =~ /\:[0-9]+/ ? "#{host}":"#{host}:2181") }.join(",") %>
+zookeeper.connect=<%= p("kafka.zookeeper_connect").flatten.map { |host| (host =~ /\:[0-9]+/ ? "#{host}":"#{host}:2181") }.join(",") %>
 
 # Timeout in ms for connecting to zookeeper
-zookeeper.connection.timeout.ms=1000000
+zookeeper.connection.timeout.ms=6000
 
 
 <% if_p("riemann.server") do %>
