--- a/jobs/kafka/templates/config/server.properties.erb
+++ b/jobs/kafka/templates/config/server.properties.erb
@@ -30,7 +30,7 @@ port=<%= p("kafka.port") %>
 # Hostname the broker will advertise to producers and consumers. If not set, it uses the
 # value for "host.name" if configured.  Otherwise, it will use the value returned from
 # java.net.InetAddress.getCanonicalHostName().
-advertised.host.name=<%= spec.networks.marshal_dump.first[1].dns_record_name %>
+advertised.host.name=<%= spec.networks.marshal_dump.first[1].ip %>
 
 # The port to publish to ZooKeeper for clients to use. If this is not set,
 # it will publish the same port that the broker binds to
